--- a/app/views/1-0/funding-start.html
+++ b/app/views/1-0/funding-start.html
@@ -9,7 +9,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: "funding-reservations"
+    href: "javascript: window.history.go(-1)"
   }) }}
 {% endblock %}
 
