--- a/app/views/1-0/funding-choose-org.html
+++ b/app/views/1-0/funding-choose-org.html
@@ -60,7 +60,7 @@
                     <div class="govuk-radios" id="whichOrgAnswer">
                         {% for entity in _account.entities %}
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="whichOrg-1" name="whichOrgAnswer" type="radio" value="entity.id" {% if myData.whichOrgAnswerTemp == entity.id %}checked{% endif %}>
+                            <input class="govuk-radios__input" id="whichOrg-1" name="whichOrgAnswer" type="radio" value="{{entity.id}}" {% if myData.whichOrgAnswerTemp == entity.id %}checked{% endif %}>
                             <label class="govuk-label govuk-radios__label" for="whichOrg-1">
                                 {{entity.name}}
                             </label>
