--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -17,5 +17,6 @@ $govuk-assets-path: '/govuk/assets/';
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
+@import "components/notifications";
 @import "components/apprenticeship-service-header";
 @import "components/accessible-autocomplete";
