1-0 confirmation and reservartions list

--- a/app/views/1-0/reserve-check-answers.html
+++ b/app/views/1-0/reserve-check-answers.html
@@ -42,11 +42,11 @@
 
         <div class="app-notification app-notification--success">
             <h1 class="govuk-heading-xl app-content-required">
-                    Apprenticeship funding is available to train and assess your apprentice
+                Apprenticeship funding is available to train and assess your apprentice
             </h1>
         </div>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Employer
@@ -74,7 +74,7 @@
                     {% endfor %}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="funding-choose-start-date">
+                    <a class="govuk-link" href="reserve-choose-start-date">
                         Change
                     </a>
                 </dd>
@@ -91,7 +91,7 @@
                     {% endfor %}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="funding-choose-course">
+                    <a class="govuk-link" href="reserve-choose-course">
                         Change
                     </a>
                 </dd>
