--- a/app/views/1-0/reserve-start.html
+++ b/app/views/1-0/reserve-start.html
@@ -23,7 +23,7 @@
             <li>the month you expect the apprenticeship training to start</li>
             <li>the <a href="#" target="_blank" class="govuk-link">apprenticeship training course</a> the apprentice will take, which can be changed later</li>
         </ul>
-        <a role="button" draggable="false" class="govuk-button" tabindex="1" href="funding-choose-org">Reserve funding</a>
+        <a role="button" draggable="false" class="govuk-button" tabindex="1" href="reserve-choose-org">Reserve funding</a>
 
     </div>
 </div>
