--- a/app/views/layout-as-emp.html
+++ b/app/views/layout-as-emp.html
@@ -43,7 +43,7 @@
   <div class="govuk-width-container">
       <ul class="das-navigation__list ">
           <li class="das-navigation__list-item">
-              <a class="das-navigation__link" href="#">Home</a>
+              <a class="das-navigation__link" href="employer-home">Home</a>
           </li>
           <li class="das-navigation__list-item">
               <a class="das-navigation__link" href="#">Finance</a>
