--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,8 +13,8 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/1-0/reserve-reservations?resetSession=true">Version 1</a> (replicated build on 18/09/19)</li>
-      <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/">pre 18 August 2019</a></li>
+      <li><a href="/14-0/reserve-reservations?resetSession=true">Version 14</a> (replicated MVS on 18/09/19)</li>
+      <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/">Versions 1 - 13</a></li>
     </ul>
   </div>
 </div>
