--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/14-0/reserve-reservations?resetSession=true">Version 14</a> (replicated MVS on 18/09/19)</li>
+      <li><a href="/14-0/setup">Version 14</a> (replicated MVS on 18/09/19)</li>
       <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/">Versions 1 - 13</a></li>
     </ul>
   </div>
